# kafka-cpplayground

./: CMakeLists.txt  LICENSE  README.md  main_consumer_ui.cpp  main_producer_ui.cpp
src/: kafka_consumer.cpp  kafka_consumer.h  kafka_producer.cpp  kafka_producer.h  kafka_utils.cpp  kafka_utils.h
